--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,7 @@
 <!-- Copyright (c) Microsoft. All rights reserved. -->
 <!-- Licensed under the MIT license. See LICENSE file in the project root for full license information. -->
 <project>
+	<!-- This is a test commit! -->
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.microsoft.azure.sdk.iot</groupId>
     <artifactId>iot-sdk-java</artifactId>
